improve openapi spec
